# Quantum_Optimal_Control

./: .gitignore  README.md  __init__.py  agent.py  base_q_env.py  base_q_env_new.py  basis_gate_library.py  context_aware_quantum_environment.py  helper_functions.py  hpo_training_config.py  hyperparameter_optimization.py  hyperparameter_optimization_resource_constraint.py  hyperparameter_optimization_ressource_constraint.py  hyperparameter_optimization_unified.py  orbit.py  ppo.py  ppoV2.py  ppoV2_new.py  ppo_unified.py  ppo_while_not_met_baseline.py  pyproject.toml  qconfig.py  quantumenvironment.py  requirements.txt  test_for_shadows.py  tf_quantumenvironment.py
00_AWS/: aws_braket_bellstate_example.ipynb  aws_braket_educational_example.ipynb  aws_braket_educational_example_RL.ipynb
00_AWS/00_documentation/: aws_hybrid_jobs_documentation.ipynb
00_AWS/01_educational_example/: aws_braket_educational_example.ipynb  aws_braket_educational_example_fidelity.ipynb
00_AWS/02_gate_level/: HPO.py  model_free_gate_calibration.ipynb  model_free_gate_calibration_HPO.ipynb  rl_training.py
00_AWS/04_Tests/: 00_aws_braket_observables.ipynb  01_rydberg_chain_pulse_level_pennylane.ipynb  pennylane_pulse.ipynb  qiskit_pulse_sx_parametrization.ipynb
00_AWS/aws_workshop/: noise-simulation.ipynb
AWS/: dummy.ipynb
QUA_files/: Draftbook.ipynb  qua_backend.py  qua_environment.py  qua_estimator.py  qua_ppo.py  qua_utils.py  videomode.py
contextual_gate_calibration/: torch_contextual_gate_cal.py  torch_gate_cal.ipynb  torch_pulse_cal.ipynb
custom_jax_sim/: Checking_sim.ipynb  README.md  __init__.py  dynamicsbackend_estimator.py  jax_solver.py  new_estimator_test.ipynb  parameterexpression.py  pulse_config.py  pulse_jax_backend.py  snow_globe_updated.ipynb  torch_pulse_cal_dynamics.ipynb  utils.py
custom_jax_sim/modified_qiskit_scripts/: dynamicsbackend_estimator.py  parameter_manager.py  parameterexpression.py  pulse_jax_backend.py  symbolic_pulses.py  utils.py
custom_jax_sim/notebooks/: Checking_sim.ipynb  fidelity_benchmark_test.ipynb  new_estimator_test.ipynb  torch_pulse_cal_dynamics.ipynb
docs/: README.md
docs/api/: README.md  agent.md  environment.md  rewards.md
docs/concepts/: basic_concepts.md
docs/examples/: README.md
docs/integrations/: qua.md
gate_level/: model_free_gate_calibration.ipynb  model_free_rl_arbitrary_state_prep.ipynb  torch_gate_cal.ipynb
gate_level_abstraction/: HPO.py  __init__.py  model_free_gate_calibration.ipynb  model_free_rl_arbitrary_state_prep.ipynb  model_free_rl_arbitrary_state_prep.py  model_free_rl_gate_calibration.py  rl_training.py
paper_results/: helper_functions.py  model_free_gate_calibration.ipynb  model_free_pulse_gate_calibration.ipynb  model_free_pulse_gate_calibration.py  model_free_rl_arb_state_prep_qiskit_pulse.py  model_free_rl_arbitrary_state_prep.ipynb  model_free_rl_arbitrary_state_prep.py  model_free_rl_gate_calibration.py  quantumenvironment.py  two_level_system_extended_control.py  yale_model_free_two_level_system_analytical.py  yale_model_free_two_level_system_example.py  yale_model_free_two_level_system_v2.py
pulse_level/: agent_config.yaml  amplitude_rx_calibration.ipynb  model_free_pulse_gate_calibration.ipynb  torch_pulse_cal.ipynb
pulse_level_abstraction/: IBMQ_pulse_calibration.ipynb  amplitude_rx_calibration.ipynb  basis_gate_library.py  model_free_pulse_gate_calibration.ipynb  model_free_pulse_gate_calibration.py
pulse_spillover_noise_use_case/: pulse_spillover_noise_helper_functions.py
rl_qoc/: __init__.py  base_parametrised_q_env.py  base_q_env.py  context_aware_quantum_environment.py  general_noise_quantum_environment.py  helper_functions.py  hpo_config.py  hyperparameter_optimization.py  orbit.py  ppo.py  ppo_cleanrl.py  ppo_config.py  qconfig.py  quantumenvironment.py  tf_utils.py
serverless_files/: context_aware_quantum_environment.py  dynamics_config.py  helper_functions.py  pattern.py  ppo.py  pulse_config.py  q_env_config.py  q_env_gate_config.yml  q_env_pulse_config.yml  qconfig.py  quantumenvironment.py  serverless_rl_qoc.ipynb
template_configurations/: __init__.py  agent_config.yaml
test/: test_notebook_gymWrappers.ipynb  test_transpiler_pass.py
tf_context_aware_gate_calibration/: tf_quantumenvironment.py
torch_contextual_gate_calibration/: hpo_pulse.py  hpo_pulse_01.py  hpo_pulse_02.py  pulse_parametrization_functions.py  pulse_parametrization_functions_v01.py  qiskit_pulse_parametrization_arbitr_gate.ipynb  qiskit_pulse_sx_parametrization.ipynb  simulation_config.py  sx_parametrization.py  sx_parametrization_02.py  sx_parametrization_03.py  sx_parametrization_functions.py  torch_contextual_gate_cal.py  torch_gate_cal.ipynb  torch_pulse_cal.ipynb  torch_quantum_environment.py
torch_gate_calibration/: torch_contextual_gate_cal.py  torch_gate_cal.ipynb  torch_pulse_cal.ipynb  torch_quantum_environment.py
(+479 files in other folders)
