[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "rl_qoc"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
description = "Reinforcement Learning for Quantum Optimal Control"
readme = "README.md"
authors = [
    { name = "Arthur Strauss", email = "arthur.strauss@u.nus.edu" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib>=3.5.2",
    "matplotlib-inline",
    "jupyterlab",
    "qiskit",
    "qiskit_aer",
    "qiskit-experiments",
    "qiskit_ibm_runtime>=0.40.1",
    "scipy",
    "tqdm",
    "gymnasium",
    "pyyaml",
    "optuna",
    "chardet",
    "tensorboard",
    "pylatexenc",
    "wandb",
]

[project.optional-dependencies]
qibo = [
    "qibo",
    "qibolab",
    "qibocal"
]
qua = [
    "qualang-tools>=0.19.5",
    "qm-qua>=1.2.2",
    "quam>=0.4.1",
    "quam-builder @ git+https://github.com/qua-platform/quam-builder.git",
    "openqasm3",
    "qm-saas"
]
qiskit-pulse = [
    "qiskit-dynamics",
    "qiskit-experiments<=0.9.0",
    "qiskit<=1.4.3",
    "jax",
    "sympy2jax"
]
qiskit-qm-provider = []
oqc = []

[tool.uv]
prerelease = "allow"

#[tool.setuptools.exclude-package-data]
#rl_qoc = ["gate_level/*", "pulse_level/*"]