[project]
name = "rl_qoc"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
description = "Reinforcement Learning for Quantum Optimal Control"
readme = "README.md"
authors = [
    { name = "Arthur Strauss", email = "arthur.strauss@u.nus.edu" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib>=3.5.2",
    "matplotlib-inline",
    "jupyterlab",
    "qiskit @ git+https://github.com/arthurostrauss/qiskit.git@dynamic_range_expr",
    "qiskit_aer>=0.17.1, <0.18.0",
    "qiskit-experiments <0.11.0",
    "qiskit_ibm_runtime>=0.40.1",
    "scipy>=1.13.0",
    "tqdm>=4.64.0",
    "gymnasium>=0.29.1",
    "pyyaml",
    "optuna",
    "chardet",
    "tensorboard",
    "pylatexenc",
    "wandb",
    "torch==2.7.1; sys_platform != 'linux'",
    "torch==2.7.1+cpu ; sys_platform =='linux'",
]

[tool.uv]
prerelease = "allow"

[tool.uv.pip]
prerelease = "allow"

[tool.uv.sources]
torch = { index = "pytorch-cpu"}

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.optional-dependencies]
qibo = [
    "qibo",
    "qibolab",
    "qibocal"
]
qua = [
    "qualang-tools>=0.19.5",
    "qm-qua>=1.2.2",
    "quam>=0.4.1",
    "quam-builder @ git+https://github.com/qua-platform/quam-builder.git",
    "openqasm3",
    "qm-saas"
]
qiskit-pulse = [
    "qiskit-dynamics >= 0.5.0",
    "qiskit-experiments<0.9.0",
    "qiskit==1.4.5",
    "jax<=0.4.34",
    "sympy2jax>=0.0.5"
]
qiskit-qm-provider = []
oqc = []



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true